<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="59dp"
        android:onClick="goHome"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signature" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="197dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wellcome"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/container">

        <RelativeLayout
            android:layout_width="183dp"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="212dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/border">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="6dp"
                android:text="@string/price2"
                android:textColor="@color/primary" />

            <Button

                android:layout_width="66dp"
                android:layout_height="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="146dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/round_bordered"
                android:backgroundTint="@color/primary"
                android:text="buy"
                android:onClick="buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageButton

                android:layout_width="163dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="11dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/car3" />

            <TextView

                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="37dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dsc1"
                android:textColor="@color/primary" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="181dp"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="213dp"
            android:layout_marginTop="208dp"
            android:background="@drawable/border">

            <ImageButton

                android:layout_width="161dp"
                android:layout_height="77dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/car1" />

            <TextView

                android:layout_width="154dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="27dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dsc1"
                android:textColor="@color/primary" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="4dp"
                android:text="@string/price4"
                android:textColor="@color/primary" />

            <Button

                android:layout_width="63dp"
                android:layout_height="18dp"
                android:onClick="buy"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_bordered"
                android:backgroundTint="@color/primary"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="181dp"
            android:layout_height="169dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="162dp"
                android:layout_height="82dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/lembo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="156dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="97dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dsc1"
                android:textColor="@color/primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="6dp"
                android:text="@string/price1"
                android:textColor="@color/primary" />

            <Button

                android:layout_width="66dp"
                android:layout_height="18dp"
                android:onClick="buy"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="146dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/round_bordered"
                android:backgroundTint="@color/primary"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="178dp"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="398dp"
            android:background="@drawable/border">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="160dp"
                android:layout_height="79dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/car2" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="157dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="29dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dsc1"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/price5"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/button13"
                android:layout_width="64dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="104dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/round_bordered"
                android:backgroundTint="@color/primary"
                android:onClick="buy"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="179dp"
            android:layout_height="169dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="208dp"
            android:background="@drawable/border">

            <ImageButton

                android:layout_width="161dp"
                android:layout_height="77dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/images" />

            <TextView

                android:layout_width="154dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="27dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/dsc1"
                android:textColor="@color/primary" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="4dp"
                android:text="@string/price3"
                android:textColor="@color/primary" />

            <Button

                android:layout_width="63dp"
                android:layout_height="18dp"
                android:onClick="buy"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_bordered"
                android:backgroundTint="@color/primary"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/shopLable"
        android:textColor="@color/primary"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>